fix side menu size overflow increase equipped item visibility

--- a/src/Components/Common/InventorySlot/inventory-slot.scss
+++ b/src/Components/Common/InventorySlot/inventory-slot.scss
@@ -22,6 +22,7 @@
     top: 0;
     right:5px;
     color: red;
+    font-weight: 800;
   }
 }
 
