--- a/src/Components/Gameplay/gameplay-screen.scss
+++ b/src/Components/Gameplay/gameplay-screen.scss
@@ -73,5 +73,6 @@
     min-width: $menu-width;
     max-width: $menu-width;
     height: 100%;
+    overflow: hidden;
   }
 }
